# potentiality

./: .gitignore  LICENSE  LIMITATIONS.md  README.md  flake.nix  potentiality.cabal  wrangler.toml
app/: Main.hs
nix/: devshell.nix  horizon-integration.nix  module.nix  package.nix  pot.nix  potentiality.nix
nix/horizon/: allowlist.yaml
nix/horizon/capabilities/: pot-tasks.md  preferences.md
public/: index.html
spec/: 00-overview.md  01-philosophy.md  02-architecture.md  03-vault-layout.md  04-cli.md  05-hitl.md  06-claude-code-backend.md  07-task-kinds.md  08-chat-client-integration.md  08-horizon-integration.md  09-provisioning.md  10-non-goals.md  99-references.md  README.md
spec/prior-art/: horizon.md  lightweight-trackers.md  openclaw-ecosystem.md  symphony.md
src/: Potentiality.hs
src/Potentiality/: Atomic.hs  CLI.hs  ClaudeCode.hs  Kind.hs  Log.hs  Meta.hs  Preferences.hs  StreamJson.hs  Task.hs  TaskLock.hs  Ulid.hs  Vault.hs  Version.hs  Wait.hs  Watch.hs
src/Potentiality/Task/: Parse.hs  Write.hs
src/Potentiality/Vault/: Scan.hs
